# gvs-propagator

./: README.md  pyproject.toml
gvs_propagator/: coherent.py  masks.py  partially_coherent.py  utils.py
gvs_propagator/notebooks/: utils.py
