[tool.poetry]
name = "gvs-propagator"
version = "0.1.0"
description = ""
authors = ["Manuel Montoya <manuel.montoya.zuluaga@vub.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
plotly = "^6.1.2"
ipython = "^9.3.0"
scipy = "^1.16.0"
imageio = "^2.37.0"
numpy = "^2.3.1"
notebook = "^7.4.3"
dask = "^2025.5.1"
kaleido = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pretty-jupyter = "^2.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
